# napari-bbox

./: LICENSE  README.md  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
src/napari_bbox/: __init__.py  _helper_functions.py  _reader.py  _utils.py  _widget.py  _writer.py  napari.yaml
src/napari_bbox/_tests/: test_reader.py  test_widget.py  test_writer.py
src/napari_bbox/boundingbox/: __init__.py  _bounding_box_list.py  _bounding_box_mouse_bindings.py  bounding_box.py  bounding_boxes.py  qt_bounding_box_control.py  vispy_bounding_box_layer.py
src/napari_bbox/boundingbox/napari_0_4_15/: _bounding_box_constants.py  _bounding_box_list.py  _bounding_box_mouse_bindings.py  _bounding_box_utils.py  _bounding_boxes_key_bindings.py  bounding_box.py  bounding_boxes.py  qt_bounding_box_control.py  vispy_bounding_box_layer.py
src/napari_bbox/boundingbox/napari_0_4_18/: _bounding_box_constants.py  _bounding_box_list.py  _bounding_box_mouse_bindings.py  _bounding_box_utils.py  _bounding_boxes_key_bindings.py  _mesh.py  bounding_box.py  bounding_boxes.py  qt_bounding_box_control.py  vispy_bounding_box_layer.py  vispy_bounding_box_visual.py
src/napari_bbox/boundingbox/napari_0_5_0/: __init__.py  _bounding_box_list.py  _bounding_box_mouse_bindings.py  _bounding_box_utils.py  _bounding_boxes_key_bindings.py  _mesh.py  bounding_box.py  bounding_boxes.py  qt_bounding_box_control.py  vispy_bounding_box_layer.py  vispy_bounding_box_visual.py
src/napari_bbox/boundingbox/napari_0_6_0/: __init__.py  _bounding_box_constants.py  _bounding_boxes_key_bindings.py  bounding_boxes.py  qt_bounding_box_control.py  vispy_bounding_box_layer.py
src/napari_bbox/resources/: __init__.py
src/napari_bbox/resources/napari_0_4_17/: cube_button.qss
src/napari_bbox/resources/napari_0_4_18/: __init__.py  cube_button.qss
