[metadata]
name = napari-bbox
version = 0.0.8
description = A new layer for bounding boxes in 2+ dimensions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bauerdavid/napari-bbox
author = David Bauer
author_email = dbauer@brc.hu
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/bauerdavid/napari-bbox/issues
    Documentation = https://github.com/bauerdavid/napari-bbox#README.md
    Source Code = https://github.com/bauerdavid/napari-bbox
    User Support = https://github.com/bauerdavid/napari-bbox/issues

[options]
packages = find:
install_requires =
    numpy
    qtpy
    napari>=0.4.15
    packaging
    pandas
    npe2
    vispy

python_requires = >=3.9
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-bbox = napari_bbox:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.package_data]
* = *.yaml
    *.svg
    *.qss
